chore: fix css on mobile

--- a/packages/playground/src/styles/index.css
+++ b/packages/playground/src/styles/index.css
@@ -224,8 +224,8 @@ pre {
 	--padding-inline: 2rem;
 	padding: var(--padding-block) var(--padding-inline);
 	padding-right: calc(var(--padding-inline) * 2);
-	margin-left: calc(var(--padding-inline) * -1);
-	margin-right: calc(var(--padding-inline) * -1);
+	margin-left: calc(var(--padding-block) * -1.5);
+	margin-right: calc(var(--padding-block) * -0.5);
 	font-family: var(--font-mono);
 
 	line-height: 1.5;
